local/deps/otel-lgtm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: observability
spec:
  selector:
    app.kubernetes.io/name: otel-lgtm
  ports:
    - name: grafana
      port: 3000
      targetPort: grafana
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-lgtm
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-lgtm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-lgtm
    spec:
      containers:
        - name: otel-lgtm
          image: grafana/otel-lgtm
          ports:
            - name: grafana
              containerPort: 3000
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
          readinessProbe:
            httpGet:
              path: /api/health
              port: grafana
            periodSeconds: 10
            failureThreshold: 30
